--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>亿人电贸</title>
+    <title>亿人共享</title>
 <!--     <script src="./src/assets/css/weui.min.css"></script>
     <script src="./src/assets/css/jquery-weui.min.css"></script>
     <script src="./src/assets/css/yiren.css"></script> -->
